deployment-configs/sandbox/mock-registry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beckn-mock-registry-$DEPLOY_VARIANT
  namespace: atlas
  labels:
    version: latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beckn-mock-registry-$DEPLOY_VARIANT
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: "arn:aws:iam::701342709052:role/aws-elasticbeanstalk-ec2-role"
        traffic.sidecar.istio.io/excludeOutboundPorts: 6379,5432
      labels:
        app: beckn-mock-registry-$DEPLOY_VARIANT
        version: latest
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
          args:
            - 'mkdir /etc/beckn && cp -HR /tmp/dhall-configs/* /etc/beckn/. && cp -HR /tmp/dhall-secrets/* /etc/beckn/. && echo "starting app server" && (/opt/app/mock-registry-exe 2>&1 | tee --output-error=warn >(/usr/sbin/log-processor --prometheus-port $LP_PROMETHEUS_PORT --kafka-brokers $LP_KAFKA_BROKERS --kafka-producer-prop $LP_KAFKA_PRODUCER_PROP --partition-key $LP_PARTITION_KEY --producer-topic $LP_PRODUCER_TOPIC $LP_EXTRA_ARGS))'
          image: 701342709052.dkr.ecr.ap-southeast-1.amazonaws.com/beckn-uat:$BUILD_VERSION
          name: beckn-mock-registry-$DEPLOY_VARIANT
          ports:
            - containerPort: 8020
              name: app-http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            privileged: false
          volumeMounts:
            - name: dhall-configs
              mountPath: "/tmp/dhall-configs"
              readOnly: true
            - name: dhall-secrets
              mountPath: "/tmp/dhall-secrets"
              readOnly: true
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: single-request-reopen
      imagePullSecrets:
        - name: jp-gcr-ec
      terminationGracePeriodSeconds: 90
      volumes:
        - name: fcm-key
          secret:
            secretName: beckn-fcm-key
        - name: dhall-configs
          configMap:
            name: beckn-dhall-config-$DEPLOY_VARIANT
            items:
              - key: mock-registry.dhall
                path: config/mock-registry.dhall
              - key: common.dhall
                path: config/common.dhall
              - key: globalCommon.dhall
                path: generic/common.dhall
        - name: dhall-secrets
          secret:
            secretName: beckn-dhall-secret-$DEPLOY_VARIANT
            items:
              - key: mock-registry.dhall
                path: config/secrets/mock-registry.dhall
              - key: common.dhall
                path: config/secrets/common.dhall
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: atlas
  name: beckn-mock-registry-$DEPLOY_VARIANT
  labels:
    app: beckn-mock-registry-$DEPLOY_VARIANT
spec:
  ports:
    - port: 8020
      targetPort: 8020
      name: app-http
  selector:
    app: beckn-mock-registry-$DEPLOY_VARIANT
