deployment-configs/sandbox/parking-bap-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beckn-parking-bap-$DEPLOY_VARIANT
  namespace: atlas
  labels:
    version: latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beckn-parking-bap-$DEPLOY_VARIANT
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: "arn:aws:iam::701342709052:role/aws-elasticbeanstalk-ec2-role"
        traffic.sidecar.istio.io/excludeOutboundPorts: 6379,5432
      labels:
        app: beckn-parking-bap-$DEPLOY_VARIANT
        version: latest
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
          args:
            - 'mkdir /etc/beckn && cp -HR /tmp/dhall-configs/* /etc/beckn/. && cp -HR /tmp/dhall-secrets/* /etc/beckn/. && echo "starting app server" && /opt/app/parking-bap-exe'
          image: 701342709052.dkr.ecr.ap-southeast-1.amazonaws.com/beckn-uat:$BUILD_VERSION
          name: beckn-parking-bap-$DEPLOY_VARIANT
          ports:
            - containerPort: 8022
              name: app-http
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8022
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 12
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 8022
            initialDelaySeconds: 30
            periodSeconds: 12
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            privileged: false
          volumeMounts:
            - name: dhall-configs
              mountPath: "/tmp/dhall-configs"
              readOnly: true
            - name: dhall-secrets
              mountPath: "/tmp/dhall-secrets"
              readOnly: true
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: single-request-reopen
      imagePullSecrets:
        - name: jp-gcr-ec
      terminationGracePeriodSeconds: 90
      volumes:
        - name: fcm-key
          secret:
            secretName: beckn-fcm-key
        - name: dhall-configs
          configMap:
            name: beckn-dhall-config-$DEPLOY_VARIANT
            items:
              - key: parking-bap.dhall
                path: config/parking-bap.dhall
              - key: common.dhall
                path: config/common.dhall
              - key: globalCommon.dhall
                path: generic/common.dhall
        - name: dhall-secrets
          secret:
            secretName: beckn-dhall-secret-$DEPLOY_VARIANT
            items:
              - key: parking-bap.dhall
                path: config/secrets/parking-bap.dhall
              - key: common.dhall
                path: config/secrets/common.dhall
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: atlas
  name: beckn-parking-bap-$DEPLOY_VARIANT
  labels:
    app: beckn-parking-bap-$DEPLOY_VARIANT
spec:
  ports:
    - port: 8022
      targetPort: 8022
      name: app-http
    - port: 9999
      targetPort: 9999
      name: http-prom
  selector:
    app: beckn-parking-bap-$DEPLOY_VARIANT
