deployment-configs/sandbox/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: atlas-internal
  namespace: atlas
spec:
  selector:
    istio: ingressgateway-public
  servers:
  - hosts:
    - api.sandbox.beckn.juspay.in
    port:
      name: http
      number: 80
      protocol: HTTP
